# autoconf-automake-examples

./: README.md
src/example-1/: create_makefile_am.sh  hello.c  readme.md
src/example-2/: Makefile.am  README.mkdn  configure.ac  x11-example.c
src/example-3/: Makefile.am  README.mkdn  configure.ac  gl-example.c
